2009-01-21 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOutlineView.m: Don't ask if the topmost item is expandable.
	On MacOS-X the delegate is not asked ... we just assume that it is.
	Fix for bug #25369

2009-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSImage.m (-compositeToPoint:fromRect:operation:,
	-compositeToPoint:fromRect:operation:fraction:,
	-dissolveToPoint:fromRect:fraction:): Fix invalid return
	statements between NS_DURING and NS_HANDLER.

2009-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAnimation.m (-_gs_startAnimationInOwnLoop): Use an auto
	release pool inside of the loop.
	* Source/NSAnimation.m: A bit of reformatting and clean up.

2009-01-18 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSAnimator.h: Remove unneeded ivar.
	* Source/GSAnimator.m: Remove retain cycle with NSAnimation and
	simplify implementation.
	* Source/NSAnimation.m: Replace NSDebugFLLog with NSDebugMLLog.

2009-01-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenu.m (-update, -setAutoenablesItems:, initWithCoder):
	Revert NSMenu changes from r27569.

	* Source/NSMenu.m (-update): Improve menu item validation by
	falling back to -validateUserInterfaceItem: if the validator
	doesn't respond to -validateMenuItem:.

	* Source/NSToolbarItem.m (-validate): Fix broken implementation.
	* Source/NSToolbarItem.m (-validateMenuItem:) Add implementation
	to validate menu items in text only representation and in an
	overflow menu.
	* Source/GSToolbarView.m (-overflowMenu): Validate each toolbar
	item before adding a menu item to an overflow menu. Also rename
	method to make its purpose clear.

	* Source/NSApplication.m (-targetForAction:to:from:): Make sure
	toolbar items are validated w.r.t. the responder chain of their
	respective window.
	* Source/NSApplication.m (-_targetForAction:keyWindow:mainWindow:):
	Helper method to consolidate target look up in the responder chain.
