@@ -1,3 +1,12 @@
+2009-01-22 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/GSWindowDecorationView.m: Add handling of in-window
+	menu. Simplify code for toolbar handling.
+	* Source/NSToolbarFrameworkPrivate.h: Publish ne methods.
+	* Source/NSWindow.m (-setMenu:): Set the menu as in-window menu.
+	* Source/NSMenuView.m: Set the frame width to the screen width in
+	setHorizontal: and not in sizeToFit.
+
 2009-01-21 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSOutlineView.m: Don't ask if the topmost item is expandable.
